statics/css/style.css
:root {
  --burgerGap: 0.3rem;

  /* Core palette */
  --primary: #1a2a80;
  --secondary: #b2b0e8;

  /* Variants */
  --primary-dark: #3b38a0;
  --primary-dark-transparent: #3b38a0df;
  --shadow-color: #3b38a027;
  --light-text: #f5f5f5;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "JetBrains Mono", sans-serif;
}

body,
html {
  width: 100%;
  height: 100%;
}

.menu-group {
  position: absolute;
  top: 2rem;
  left: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: fit-content;
  height: fit-content;
  z-index: 999;
}

.burger {
  width: 3rem;
  height: 3rem;
}

.burger label {
  width: 100%;
  background-color: var(--primary);
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
  border-radius: 50%;
  backdrop-filter: blur(0.4rem);
  gap: var(--burgerGap);
  transition: all 0.2s ease;
  /* transform: translateY(100%);
  transition-delay: 0.5s; */
}

.burger label:active {
  transform: translateY(0.1rem);
  opacity: 0.8;
}

.burger label:hover {
  filter: brightness(1.3);
  /* transform: translateY(0); */
}

.burger span {
  width: 1.7rem;
  height: 2px;
  border-radius: 3px;
  background-color: var(--secondary);
  transition: all 0.2s ease;
}

.menu {
  display: flex;
  opacity: 0;
  height: 300px;
  /* width: 200px; */
  border-radius: 1rem;
  overflow: hidden;
  background-color: var(--secondary);
  backdrop-filter: blur(0.4rem);
  pointer-events: none;
  transform: scale(0.3);
  max-width: 0;
  max-height: 0;
  transition: opacity 0.3s ease-in-out, transform 0.2s ease, height 0.5s ease,
    width 0.3s ease, max-height 0.5s ease, max-width 0.3s ease;
}

body:has([type="checkbox"]:checked) .menu {
  opacity: 1;
  pointer-events: all;
  transform: scale(1);
  max-width: fit-content;
  margin-top: 0.5rem;
  max-height: 300px;
}

body:has([type="checkbox"]:checked) .burger label {
  border-radius: 0.5rem;
  border-color: transparent var(--secondary);
}

body:has([type="checkbox"]:checked) .burger span:nth-child(1) {
  transform: translateY(calc(var(--burgerGap) + 100%)) rotate(0.125turn);
}

body:has([type="checkbox"]:checked) .burger span:nth-child(2) {
  width: 0;
}

body:has([type="checkbox"]:checked) .burger span:nth-child(3) {
  transform: translateY(calc(-1 * var(--burgerGap) - 100%)) rotate(-0.125turn);
}

.menu-panel,
.menu-titles {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.menu-panel {
  width: 3rem;
  color: var(--secondary);
  background-color: var(--primary);
  border-bottom-left-radius: 1rem;
  border-top-left-radius: 1rem;
  padding: 0.7rem 0;
  overflow: hidden;
}

.menu-titles {
  background-color: transparent;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  width: 0;
  height: 100%;
  opacity: 0;
  pointer-events: none;
  background-color: var(--primary-dark);
  color: var(--secondary);
  transform: translateX(-100%);
  transition: all 0.2s ease;
  z-index: -1;
}

.menu:has(.menu-panel label:hover) .menu-titles,
.menu:hover .menu-titles {
  width: 5.5rem;
  transform: translateX(0);
  pointer-events: all;
  opacity: 1;
  padding: 0.7rem;
}

.menu-panel span.group,
.menu-titles span.group {
  display: flex;
  flex-direction: column;
  /* gap: 0.7rem; */
  justify-content: flex-start;
  height: 100%;
  width: 100%;
}

.menu-panel label {
  width: 100%;
  height: 2rem;
  cursor: pointer;
  display: grid;
  position: relative;
  place-items: center;
  transition: all 0.2s ease;
}

input[type="radio"]:checked + label {
  background-color: var(--secondary);
  color: var(--primary);
}
.menu-panel label:hover {
  background-color: var(--primary-dark-transparent);
}

.menu-panel label:active {
  transform: translateY(1px);
}

input[type="radio"]:checked + label {
  transform: scale(1);
}

input[type="radio"] + label::before {
  content: "";
  background-color: var(--primary);
  width: 0.25rem;
  position: absolute;
  left: 0;
  height: 100%;
  transform: translateX(-100%);
  opacity: 1;
  border-bottom-right-radius: 0.3rem;
  border-top-right-radius: 0.3rem;
  transition: all 0.2s ease;
}

input[type="radio"] + label::after {
  content: "";
  width: 0.7rem;
  height: 0.7rem;
  background-color: var(--primary-dark);
  right: 0;
  opacity: 0;
  position: absolute;
  transform: translateX(100%) rotate(45deg);
  transition: all 0.2s ease, transform 0.5s ease;
}

.menu:hover input[type="radio"]:checked + label::after {
  opacity: 1;
  transform: translateX(50%) rotate(45deg);
}

input[type="radio"]:checked + label::before {
  transform: translateX(0);
  opacity: 1;
}

.menu-panel label span.menu-group-icon {
  width: 60%;
  width: 1.5rem;
  height: 1.5rem;
  aspect-ratio: 1;
}

.menu-panel label span.menu-group-icon svg {
  width: 100%;
  height: 100%;
}

.menu-titles p.menu-titles-text {
  width: 100%;
  min-width: 0;
  max-width: 4rem;
  height: 2rem;
  align-items: center;
  display: flex;
  overflow: hidden;
}

.menu-titles p.menu-titles-text label:hover {
  text-decoration: underline;
}

.menu-titles p.menu-titles-text label {
  width: 100%;
  cursor: pointer;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

/* profile box */
.menu-profile {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: space-between;
  color: var(--primary);
  gap: 0.5rem;
  box-shadow: 0.3rem 0 0.3rem var(--shadow-color);
  overflow: hidden;
  border-radius: 0.8rem;
  backdrop-filter: blur(0.4rem);
  width: 0;
  transition: all 0.3s ease;
  opacity: 0;
}

.menu:has(input#profile:checked) .menu-profile {
  width: 200px;
  margin: 0.6em;
  padding: 0.4rem;
  opacity: 1;
}

.menu-profile-head {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  color: var(--primary);
  width: 100%;
  overflow: hidden;
  height: fit-content;
}

.menu-profile-head img {
  width: 3.5rem;
  height: 3.5rem;
  aspect-ratio: 1;
  object-fit: cover;
  border-radius: 50%;
}

.menu-profile-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
  width: 100%;
}

.menu-profile-body-bio {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
}

/* Important */
.menu-profile-body-bio p {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  font-size: 0.9rem;
  overflow: hidden;
  max-height: 100px;
  text-overflow: ellipsis;
}

.menu-profile-body-lastLogin {
  font-size: 0.8rem;
  color: var(--light-text);
}

/* Bottom Cricle */
span.bottom-cricle {
  content: "";
  width: 7rem;
  height: 7rem;
  background-color: var(--primary-dark);
  border-radius: 50%;
  position: absolute;
  right: 0;
  bottom: 0;
  transform: translate(20%, 40%);
  z-index: -1;
}

